# cjlang

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
cjlang/: keywords.py
cjlang/ast/: node.py  tree.py
cjlang/diagnostics/: diagnostic.py  engine.py
cjlang/lexer/: cursor.py  kinds.py
cjlang/utils/unicode_xid/: tables.py
cjlang/utils/unicode_xid/scripts/: unicode.py
scripts/: clean.sh  unicode_xid.py
src/cjlang/diagnostics/: diagnostic.py
src/cjlang/lexer/: cursor.py
src/cjlang/parser/: parser.py
src/cjlang/utils/unicode_xid/: __init__.py  tables.py
tests/: test_lexer_number.py  test_lexer_simple.py
tests/lexer/: lexer_test_simple.py
